# NACF

./: .gitignore  DATASET_GUIDE.md  DATA_SOURCES.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  QUICKSTART.md  README.md  TRAINING_WITH_REAL_DATA.md  analyze_rl_results.py  download_datasets.py  download_uci_retail.py  environment.yml  generate_personas.py  pyproject.toml  requirements.txt  setup.py  test_model.py  train_rl_agent.py  train_rl_improved.py  train_with_real_data.py  train_with_uci_data.py  verify_installation.py
experiments/: __init__.py
experiments/hypothesis_testing/: __init__.py
experiments/hypothesis_testing/h1_friction_detection/: train_tan.py
experiments/hypothesis_testing/h2_persona_validity/: generate_personas.py
experiments/hypothesis_testing/h5_rl_optimization/: train_rl_agent.py
scripts/: download_all_data.sh  reproduce_paper_results.sh
src/: __init__.py
src/cli/: demo.py  download_data.py  evaluate.py  generate_personas.py  train.py
src/config/: data_config.py  model_config.py  training_config.py
src/data/cognitive_mapping/: __init__.py  entropy_calculator.py  load_mapper.py
src/data/datasets/: __init__.py  clickstream_dataset.py
src/data/downloaders/: __init__.py  dataset_downloader.py
src/data/loaders/: __init__.py  cognitive_loader.py  ecommerce_loader.py  neurodivergent_loader.py
src/data/preprocessing/: feature_engineering.py  sequence_builder.py
src/evaluation/: metrics.py
src/training/: tan_trainer.py
src/training/callbacks/: early_stopping.py  model_checkpoint.py
tests/: __init__.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_data_loaders.py  test_tan_model.py
