[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nacf"
version = "0.1.0"
description = "NeuroAdaptive Checkout Framework for neurodivergent-inclusive e-commerce"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Kapil Kumar Reddy Poreddy"}
]
keywords = ["neurodiversity", "e-commerce", "federated-learning", "reinforcement-learning", "accessibility"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "transformers>=4.30.0",
    "flwr>=1.5.0",
    "gymnasium>=0.28.0",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
viz = [
    "ipywidgets>=8.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
nacf-train = "src.cli.train:main"
nacf-eval = "src.cli.evaluate:main"
nacf-demo = "src.cli.demo:main"
nacf-generate-personas = "src.cli.generate_personas:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
